Use decoder factory for dig2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,8 +295,8 @@ if(BUILD_DOCUMENTATION OR CMAKE_BUILD_TYPE MATCHES "Release")
     add_subdirectory(docs)
 endif()
 
-# Add examples (commented out for standalone library build)
-# add_subdirectory(examples)
+# Add examples
+add_subdirectory(examples)
 
 # Install configuration
 install(TARGETS DELILA
