Small refactoring adding tests

--- a/AMax_test.conf
+++ b/AMax_test.conf
@@ -6,7 +6,7 @@
 URL dig2://172.18.4.56
 Threads 3
 ModID 0
-Debug false
+Debug true
 
 # ============================================================================
 # Standard CAEN Parameters (matching main.c)
@@ -17,7 +17,9 @@ Debug false
 /ch/0..31/par/DCOffset 50
 
 # Global trigger configuration - Software trigger with test pulse
-/par/AcqTriggerSource SwTrg | TestPulse
+/par/ITLAMainLogic OR
+#/par/AcqTriggerSource SwTrg | TestPulse
+/par/AcqTriggerSource ITLA
 /par/TestPulsePeriod 1000
 /par/TestPulseWidth 16
 
@@ -38,42 +40,42 @@ Debug false
 # Since these are commented in the original code, they are not active here.
 
 # ============================================================================
-# Optional: Typical AMax Custom Register Settings
+# DELILA Custom Registers (from values_final.txt)
 # ============================================================================
-# These are common AMax register settings found in example configurations.
-# Uncomment to enable. Note: Register names match RegisterFile.json exactly,
-# including original spelling (M_lenght, shapung_len, offsett, etc.)
+# These register settings match PreSearch/AMax/DELILA_impl/values_final.txt
+# Register names match RegisterFile.json exactly, including original spelling
+# (M_lenght, shapung_len, offsett, etc.)
 
-# Core control registers
-# /reg/hooold 5000           # Hold-off time
-# /reg/M_lenght 5            # Moving average length (note: original spelling)
-# /reg/ft_delay 720          # Fast trigger delay
-# /reg/ft_hold 1             # Fast trigger hold
-# /reg/en_shift 0            # Enable shift
-# /reg/en_out_h 0            # Enable output high
-# /reg/en_shift_in 0         # Enable shift input
-# /reg/GAIN 1050             # Digital gain
+# Core control registers (addresses 0x0000-0x0007)
+# /reg/en_out_h 0            # Address 0x0005 - Enable output high
+# /reg/en_shift 0            # Address 0x0004 - Enable shift
+# /reg/M_lenght 5            # Address 0x0001 - Moving average length (original spelling)
+# /reg/hooold 5000           # Address 0x0000 - Hold-off time
+# /reg/GAIN 1050             # Address 0x0007 - Digital gain
+# /reg/en_shift_in 0         # Address 0x0006 - Enable shift input
+# /reg/ft_delay 720          # Address 0x0002 - Fast trigger delay
+# /reg/ft_hold 1             # Address 0x0003 - Fast trigger hold
 
-# System control registers
-# /reg/reg_en 4              # Register enable
-# /reg/reg_amax 4            # AMax register control
+# System control registers (addresses 0xE0020-0xE0021)
+# /reg/reg_en 4              # Address 0xE0020 - Register enable
+# /reg/reg_amax 4            # Address 0xE0021 - AMax register control
 
-# CFD parameters (Constant Fraction Discriminator)
-# /reg/delay_in 32           # CFD delay input
-# /reg/fract_in 25000        # CFD fraction input
-# /reg/thrcfd 50             # CFD threshold
-# /reg/delay_trigger 96      # CFD trigger delay
-# /reg/baseline_len 6        # CFD baseline length
+# CFD parameters (Constant Fraction Discriminator) (addresses 0x8000F-0x80013)
+# /reg/delay_in 32           # Address 0x8000F - CFD delay input
+# /reg/fract_in 25000        # Address 0x80010 - CFD fraction input
+# /reg/thrcfd 50             # Address 0x80011 - CFD threshold
+# /reg/delay_trigger 96      # Address 0x80012 - CFD trigger delay
+# /reg/baseline_len 6        # Address 0x80013 - CFD baseline length
 
-# Energy parameters
-# /reg/sub1_len 2            # Sub-window 1 length
-# /reg/sub1_delay 570        # Sub-window 1 delay
-# /reg/sub2_delay 670        # Sub-window 2 delay
-# /reg/mult 3800000          # Multiplication factor
+# Energy parameters (addresses 0xE000C-0xE000F)
+# /reg/sub1_len 2            # Address 0xE000C - Sub-window 1 length
+# /reg/sub1_delay 570        # Address 0xE000D - Sub-window 1 delay
+# /reg/sub2_delay 670        # Address 0xE000E - Sub-window 2 delay
+# /reg/mult 3800000          # Address 0xE000F - Multiplication factor
 
-# AMax amplitude parameters
-# /reg/shapung_len 6         # Shaping length (note: original spelling)
-# /reg/Window_MAXIM 1000     # Maximum window
-# /reg/DELAY_AM 100          # Amplitude delay
-# /reg/AMAX_WINDOW 1000      # AMax window
-# /reg/offsett 1000          # Offset (note: original spelling)
+# AMax amplitude parameters (addresses 0xE001B-0xE001F)
+# /reg/shapung_len 6         # Address 0xE001B - Shaping length (original spelling)
+# /reg/Window_MAXIM 1000     # Address 0xE001C - Maximum window
+# /reg/DELAY_AM 100          # Address 0xE001D - Amplitude delay
+# /reg/AMAX_WINDOW 1000      # Address 0xE001E - AMax window
+# /reg/offsett 1000          # Address 0xE001F - Offset (original spelling)
