--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,9 +110,30 @@ else()
     message(STATUS "Network functionality disabled - ZMQ not found")
 endif()
 
+# ROOT (optional - for MonitorROOT component)
+# Use ROOTSYS environment variable to find ROOT
+if(DEFINED ENV{ROOTSYS})
+    list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
+endif()
+
+# Find ROOT with required components for MonitorROOT
+find_package(ROOT QUIET COMPONENTS RIO Net RHTTP)
+if(ROOT_FOUND)
+    include(${ROOT_USE_FILE})
+    message(STATUS "ROOT found with required components - MonitorROOT will be built")
+    set(HAS_ROOT TRUE)
+else()
+    message(STATUS "ROOT not found or missing required components - MonitorROOT will not be built")
+    set(HAS_ROOT FALSE)
+endif()
+
 # Add component sources (requires ZMQ)
 if(ZMQ_FOUND)
-    file(GLOB_RECURSE COMPONENT_SOURCES "lib/component/src/*.cpp")
+    file(GLOB COMPONENT_SOURCES "lib/component/src/*.cpp")
+    # Exclude MonitorROOT if ROOT is not available
+    if(NOT HAS_ROOT)
+        list(FILTER COMPONENT_SOURCES EXCLUDE REGEX ".*MonitorROOT\.cpp$")
+    endif()
     message(STATUS "Component library enabled")
 else()
     set(COMPONENT_SOURCES "")
@@ -173,6 +194,10 @@ endif()
 if(CAEN_FELIB)
     target_link_libraries(DELILA PUBLIC ${CAEN_FELIB})
 endif()
+if(HAS_ROOT)
+    target_link_libraries(DELILA PUBLIC ${ROOT_LIBRARIES} RHTTP)
+    target_compile_definitions(DELILA PUBLIC HAS_ROOT)
+endif()
 
 # Compiler definitions
 if(ZMQ_FOUND)
@@ -196,6 +221,13 @@ option(BUILD_TESTS "Build tests" ON)
 if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
+endif()
+
+# Option to build examples
+option(BUILD_EXAMPLES "Build example executables" ON)
+
+if(BUILD_EXAMPLES AND ZMQ_FOUND)
+    add_subdirectory(examples)
 endif()
 
 # Option to build documentation
@@ -283,6 +315,11 @@ if(CAEN_FELIB)
 else()
     message(STATUS "  CAEN FELib:        NO")
 endif()
+if(HAS_ROOT)
+    message(STATUS "  ROOT:              YES")
+else()
+    message(STATUS "  ROOT:              NO")
+endif()
 message(STATUS "")
 message(STATUS "Features:")
 if(ZMQ_FOUND)
@@ -294,6 +331,11 @@ if(CAEN_FELIB)
     message(STATUS "  Digitizer:             ENABLED")
 else()
     message(STATUS "  Digitizer:             DISABLED (CAEN FELib not found)")
+endif()
+if(HAS_ROOT)
+    message(STATUS "  MonitorROOT:           ENABLED")
+else()
+    message(STATUS "  MonitorROOT:           DISABLED (ROOT not found)")
 endif()
 message(STATUS "======================================================")
 message(STATUS "")
